# refrover

./: .eslintrc.json  .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml
src/: api.ts
src-tauri/: Cargo.toml  diesel.toml  search_results.txt  tauri.conf.json
src-tauri/migrations/2024-07-11-043756_create_posts/: up.sql
src-tauri/migrations/2024-07-11-192602_enable_fk/: down.sql
src-tauri/migrations/2024-07-11-193604_create_files_tables/: down.sql  up.sql
src-tauri/migrations/2024-07-11-193844_create_tags_tables/: down.sql  up.sql
src-tauri/migrations/2024-08-02-192509_create_image_features/: up.sql
src-tauri/migrations/2024-08-05-235534_create_thumbnails/: down.sql  up.sql
src-tauri/models/: ViT-L_14_336px_ln_final.pt  ViT-L_14_336px_logit_scale.pt  ViT-L_14_336px_positional_embedding.pt  ViT-L_14_336px_text_projection.pt  ViT-L_14_336px_transformer.onnx
src-tauri/rover/: Cargo.toml  tauri.conf.json
src-tauri/rover/migrations/2024-07-11-192602_enable_fk/: up.sql
src-tauri/rover/migrations/2024-07-11-193604_create_files_tables/: down.sql  up.sql
src-tauri/rover/migrations/2024-08-02-192509_create_image_features/: down.sql  up.sql
src-tauri/rover/migrations/2024-08-13-034200_create_failed_encodings/: down.sql  up.sql
src-tauri/rover/models/: ViT-L_14_336px.onnx  ViT-L_14_336px_visual.onnx
src-tauri/rover/src/: ann.rs  clip.rs  commands.rs  db.rs  error.rs  events.rs  interface.rs  junk_drawer.rs  lib.rs  main.rs  models.rs  notify_handlers.rs  preprocessing.rs  queries.rs  schema.rs  state.rs  thumbnails.rs  uuid.rs
src-tauri/src/: ann.rs  clip.rs  commands.rs  db.rs  image_features.rs  image_metadata.rs  interface.rs  junk_drawer.rs  lib.rs  main.rs  metadata.rs  models.rs  preprocessing.rs  queries.rs  schema.rs  state.rs  thumbnails.rs
src/components/: AssetDetails.tsx  AssetTable.tsx  Gallery.tsx  GalleryCard.tsx  Search.tsx  StatusBar.tsx  TagHierarchy.tsx  WatchedDirectories.tsx  WatchedDirectoriesList.tsx
src/hooks/: store.tsx
src/interfaces/: FileMetadata.tsx  FileUuid.tsx  Payload.tsx  TaskError.tsx  thumbnail.tsx
src/pages/: index.tsx
vizlib/: package.json  pnpm-lock.yaml
vizlib/app/: greet.tsx
vizlib/src-tauri/: tauri.conf.json
vizlib/src-tauri/src/: main.rs
