[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "cli", "api-all"] }
libsqlite3-sys = { version = "0.28.0", features = [ "bundled" ] }
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.1.0"
dirs = "5.0.1"
rustc-hash = "2.0.0"
ort = { version = "2.0.0-rc.4", features = [ "copy-dylibs", "cuda", "tensorrt" ] }
instant-clip-tokenizer = { version = "0.1.0", features = ["ndarray"] }
image = "0.25.2"
ndarray = "0.15.6"
bincode = "1.3.3"
rayon = "1.10.0"
hnsw_rs = "0.3.0"
cpu-time = "1.0.0"
thiserror = "1.0.63"
tauri-plugin-persisted-scope = "0.1.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
